--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     <script src="script.js"></script>
   </head>
   <body>
+    <div id="header">Trivia</div>
+    <div id="trivia" class="triviaAnswers">Loading...</div>
+
   </body>
 </html>
